css/style.css
@import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900&display=swap');
*
/* Defaults */
{
    margin: 0;
    padding: 0;
    font-family: 'Poppins', sans-serif;
    --default_color_1:  #66596C;
    --default_color_2:  #3f5da1;
    --default_color_3:  #9da3bb;
    --default_color_4: yellow;
    --background_color: #e6f1f5;
    /*Side Banner*/
    --side_banner_color: var(--default_color_3);
    /*Logo*/
    --logo_color_1: var(--default_color_1);
    --logo_color_2: var(--default_color_2);
    /*Links*/
    --link_color_1: var(--default_color_1);
    --link_color_2: var(--default_color_1);
    --splash_color: var(--default_color_2);
    /*Text*/
    --text_color_1: var(--default_color_1);
    --text_color_2: var(--default_color_2);
    --text_color_3: var(--default_color_3);
    /*Background Logo*/
    --background_logo_color: var(--default_color_1);

}
.background {
  background-color: var(--background_color);
  z-index: -3;
  position: absolute;
  top: 0;
  right: 0;
  height: 100%;
  width: 100%;
}
.container
{
    position: relative;
    padding: 0 100px;
    min-height: 100vh;
}
.container:before
{
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    width: 25%;
    height: 100%;
    background: var(--side_banner_color);
    z-index: -2;
}
.container:after
{
    content: 'Hair by superkate!';
    position: absolute;
    bottom: 0;
    left: 0;
    font-size: 8vw;
    z-index: -2;
    font-weight: 700;
    opacity: 0.1;
    color: var(--default_color_3);
}

/* Hair By Superkate Header */
header
{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 0;
}

header .logo
{
    font-weight: 700;
    text-transform: uppercase;
    color: var(--logo_color_1);
    text-decoration: none;
    font-size: 30px;
}
header .logo span
{
    color: var(--logo_color_2);
}

/* Icons */
.icons
{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-right: 50px 0;
}
.icons .social_media
{
  position: relative;
  display: flex;
}
.icons .social_media li
{
  list-style: none;
  margin-left: 30px;
}
.icons .social_media li img
{
  display: inline-block;
  max-height: 24px;
  transition: 0.5s ease-in-out;
}
.icons .social_media li:hover img
{
  transform: translateY(-10px);
}

#centerpiece {
  display: flex;
  margin-top: 10px;
  margin-right: 10px;
  margin-left: 10px;
}

/* Form Side */
#form_side
{
  float: left;
  display: block;
  justify-content: space-between;
  align-items: center;
  margin-top: 50px;
  position: relative;
  max-width: 400px;
  margin-right: 10px;
}
#form_side div
{
  display: block;
}

#form_side h2
{
  font-size: 24px;
  text-transform: uppercase;
  font-weight: 800;
  line-height: 1.2em;
  color: var(--text_color_1);
  text-align: center;
}
#form_side h5
{
  font-size: 14px;
  font-weight: 800;
  line-height: 1.2em;
  color: var(--text_color_1);
  text-align: center;
}
#form_side p
{
  font-size: 18px;
  color: var(--text_color_2);
  line-height: 1.8em;
  margin: 20px 0;
}
#form_side a
{
  position: relative;
  display: inline-block;
  text-transform: uppercase;
  font-weight: 700;
  color: var(--text_color_1);
  letter-spacing: 1px;
  font-size: 18px;
  text-decoration: none;
  padding-left: 15px;
}

#happy_form {
  position: relative,
}

#happy_form input {
  font-size: 18px;
  color:  var(--text_color_2);
  margin-bottom: 10px; 
  width: 350px;
}
#happy_form textarea {
  font-size: 18px;
  color:  var(--text_color_2);
  height: 100px;
  width: 350px;
}
#happy_form label {
  color:  var(--text_color_3);
  font-size: 15px;
  font-weight: normal;
  left: 5px;
  top: -15px;
}

#instafeed {
  position: relative;
  top: 0px;
  left: 100px;
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: space-around;
}

#instafeed a {
  position: relative;

  top: 0px;
  right: 10px;
  opacity: 1;

}

#instafeed a img {
  width: 300px;
  height: 300px;

}

